[project]
name = "plastron"
dynamic = ["version"]
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "plastron-client",
    "plastron-messaging",
    "plastron-models",
    "plastron-rdf",
    "plastron-repo",
    "plastron-utils",
]

[project.optional-dependencies]
cli = ["plastron-cli"]
stomp = ["plastron-stomp"]
web = ["plastron-web"]

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# this is just a meta-package, and includes no code of its own
packages = []

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }
# TODO: can we also make the dependencies and optional dependencies dynamic
# so they can pick up the version number from VERSION too?
