[project]
name = "plastron-cli"
description = "Plastron command line client"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "BeautifulSoup4",
    "lxml<6.0",
    "Pillow",
    "plastron-jobs",
    "plastron-models",
    "plastron-repo",
    "plastron-utils",
    "pyparsing",
    "pysolr",
    "PyYAML",
    "rdflib",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
plastron = "plastron.cli:main"

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }

[tool.pytest.ini_options]
markers = ['jobs_dir']
