[project]
name = "plastron-client"
version = "4.0.0-dev3"
requires-python = ">= 3.8"
dependencies = [
    "rdflib",
    "requests",
    "requests-jwtauth@git+https://github.com/umd-lib/requests-jwtauth.git@1.0.0",
    "urlobject",
]

[project.optional-dependencies]
test = [
    "freezegun",
    "pytest",
    "pytest-cov",
]
