[project]
name = "plastron-jobs"
description = "Batch job processing"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "bagit",
    "beautifulsoup4",
    "paramiko",
    "plastron-client",
    "plastron-messaging",
    "plastron-models",
    "plastron-repo",
    "plastron-utils",
    "pyparsing",
    "PyYAML",
    "rdflib",
    "requests",
    "URLObject",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-datadir",
]

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }
