[project]
name = "plastron-rdf"
description = "RDF to Python object mapper"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    # rdflib 7.3+ does not currently work with the TrackChangesGraph
    # due to an explicit type check in rdflib.plugins.sparql.update.
    # A comment above this type check code indicates that the rdflib
    # maintainers intend to remove this type check once a series of
    # modifications and deprecations in the ConjunctiveGraph and
    # Dataset classes. For the time-being, though, we are pinning
    # rdflib to a version before this type check was introduced.
    "rdflib<7.3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "freezegun",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }
