[project]
name = "plastron-repo"
version = "4.1.4-rc1"
requires-python = ">= 3.8"
dependencies = [
    "bagit",
    "beautifulsoup4",
    "paramiko",
    "pysolr",
    "PyYAML",
    "rdflib",
    "requests",
    "URLObject",
]

[project.optional-dependencies]
test = [
    "freezegun",
    "pytest",
    "pytest-cov",
]
