[project]
name = "plastron-repo"
version = "4.3.0-rc2"
requires-python = ">= 3.8"
dependencies = [
    "bagit",
    "beautifulsoup4",
    "paramiko",
    "pysolr",
    "PyYAML",
    "rdflib",
    "requests",
    "URLObject",
]

[project.optional-dependencies]
test = [
    "freezegun",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
]
