[project]
name = "plastron-repo"
description = "High-level classes and functions for interacting with a Fedora repository"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "paramiko",
    "plastron-client",
    "plastron-messaging",
    "plastron-models",
    "plastron-utils",
    "pysolr",
    "PyYAML",
    "rdflib",
    "requests",
    "URLObject",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "freezegun",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
]

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }
