[project]
name = "plastron-stomp"
version = "4.3.1"
description = "Plastron STOMP daemon"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "click",
    "BeautifulSoup4",
    "pyparsing",
    "PyYAML",
    "stomp.py",
    'watchdog==0.10.3',
]

[project.optional-dependencies]
test = [
    'CoilMQ',
    "pytest",
    "pytest-cov",
]

[project.scripts]
plastrond-stomp = 'plastron.stomp.daemon:main'

[tool.pytest.ini_options]
markers = ['jobs_dir']
