[project]
name = "plastron-stomp"
description = "Plastron STOMP daemon"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "click",
    "BeautifulSoup4",
    "plastron-jobs",
    "plastron-models",
    "plastron-repo",
    "plastron-utils",
    "pyparsing",
    "PyYAML",
    "stomp.py",
    "watchdog",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    'CoilMQ',
    "pytest",
    "pytest-cov",
]

[project.scripts]
plastrond-stomp = 'plastron.stomp.daemon:main'

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }

[tool.pytest.ini_options]
markers = ['jobs_dir']
