[project]
name = 'plastron-utils'
version = "4.3.1"
description = 'Utility functions and namespace definitions for Plastron'
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = '>=3.8'

[project.optional-dependencies]
dev = ['pycodestyle']
test = [
    'flask',
    'freezegun',
    'httpretty',
    'http-server-mock',
    'pytest',
    'pytest-datadir',
]

[project.scripts]

[project.urls]
Homepage = 'https://github.com/umd-lib/plastron'
'Bug Reports' = 'https://github.com/umd-lib/plastron/issues'
Source = 'https://github.com/umd-lib/plastron'

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
